--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html> 
-<script src="build/react.js"></script>
-<script src="build/react-dom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-<script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
 <!--<script type="text/babel" src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>-->
 <html> 
-<head> 
-<title>MaaS</title> 
-</head> 
-<body>
-	<div id="content"></div>
-	<!--<script type="text/babel" src="scripts/components/provaView.react.jsx"></script>-->
-	<!--<script type="text/babel" src="scripts/app.jsx"></script>-->
-    <script type="text/babel" src="scripts/components/home.react.jsx"></script>
-</body> 
+	<head> 
+		<title>MaaS</title> 
+	</head> 
+	<body>
+		<!--<div id="content"></div>-->
+		<!--<script type="text/babel" src="scripts/components/provaView.react.jsx"></script>-->
+		<script type="text/javascript" src="scripts/app.js"></script>
+	    <!--<script type="text/babel" src="scripts/components/home.react.jsx"></script>-->
+	    
+	</body> 
 </html>
