terminato settaggio ambiente di lavoro

--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html> 
 	<head> 
-		<title>MaaS</title> 
+		<title>MaaS</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head> 
 	<body>
+		<div id="name">
+			<h1>MaaS</h1>
+			<h3>MongoDB as an Admin Service</h3>
+		</div>
 		<div id="content"></div>
-		<!--<script type="text/babel" src="scripts/components/provaView.react.jsx"></script>-->
 		<script src="dist/js/app.js"></script>
-	    <!--<script type="text/babel" src="scripts/components/home.react.jsx"></script>-->
-	    
 	</body> 
 </html>
