--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -4,14 +4,11 @@
 		<title>MaaS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' >
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css" />
 	</head> 
 	<body>
-		<div id="name">
-			<h1>MaaS</h1>
-			<h3>MongoDB as an Admin Service</h3>
-		</div>
 		<div id="content"></div>
 		<script src="dist/js/app.js"></script>
 	</body> 
