--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -6,7 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' >
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		
+		<link rel="stylesheet" href="css/material.css">
 		<link rel="stylesheet" href="css/main.css" />
+		<script src="dist/js/material.js"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	</head>
 	<body>
 		<div id="content"></div>
