--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -6,9 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' >
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/react-bootstrap-table-all.min.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/react-bootstrap-table.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div id="content"></div>
