--- a/MaaS/client/index.html
+++ b/MaaS/client/index.html
@@ -14,7 +14,7 @@
 		<script src="ace-editor/ace.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<div id="content"></div>
+		<div id="app"></div>
 		<script src="dist/js/app.js"></script>
 	</body>
 </html>
