--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		<script src="ace-editor/ace.js" type="text/javascript" charset="utf-8"></script>
+		<script src="ace-editor/ext-language_tools.js"></script>
+
 	</head>
 	<body>
 		<div id="app"></div>
